--- a/kotek/index.html
+++ b/kotek/index.html
@@ -7,7 +7,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-        <div class="container min-h-5 bg-[url('images/image.png')] bg-center bg-cover">
+        <div class="container min-h-5 bg-[url('images/bg.png')] bg-center bg-cover">
             <nav class="flex items-center">
                 <img src="images/logo.png" class="w-40 cursor-pointer">
                 <ul class="flex-1 text-center">
